--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="container-fluid fondo justify-content-center align-items-center">
+  <div class="container-fluid fondo">
     <div class="caja-blanca">
       <div class="container-fluid">
         <h1>hola</h1>
@@ -31,7 +31,7 @@
       <div class="container-fluid">
         <h1>hola</h1>
       </div>
-      <div class="d-flex flex-column">
+      <div class="d-flex flex-column"><!-- display: flex, flex-direction: column-->
         <i class="fa-solid fa-pen-to-square fs-5 text-center "></i>
       </div>
     </div>
